Bug 268318 - Molecular Editor shows wrong labels at atoms.
Summary: Molecular Editor shows wrong labels at atoms.
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.30
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-12 21:46 UTC by jure.slak
Modified: 2012-09-24 10:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jure.slak 2011-03-12 21:46:15 UTC
Version:           0.30 (using KDE 4.6.1) 
OS:                Linux

When I draw a molecule, atoms are labeled with names. You can change that to None, Atom numbers, Element symbols or Element name. Well element symbol shows the name, and the Element name shows electornegativity I guess.

Reproducible: Always

Steps to Reproduce:
change the labels

Actual Results:  
wrong labels

Expected Results:  
Print the correct labels

OS: Linux (i686) release 2.6.35-27-generic
Compiler: cc
Comment 1 Etienne 2011-03-14 18:22:54 UTC
SVN commit 1224889 by erebetez:

Fixing the symbol and name label for the moleculeviewer.
Element number still needs fixing.
CCBUG: 268318

 M  +2 -2      kalziumglwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1224889
Comment 2 Etienne 2012-09-24 10:12:57 UTC
Git commit e60aa6fdf5f59fb620b68edb13492583d79bcc7c by Etienne Rebetez.
Committed on 24/09/2012 at 11:27.
Pushed by erebetez into branch 'master'.

Removing the atom index from the label combobox in the molecule drawer.
The index in avogadro is really the id of the atom drawn. It is not the element number.

For the kalzium molecule view/drawer the id makes no sens to have.

M  +2    -6    compoundviewer/kalziumglwidget.cpp
M  +2    -2    src/tools/moleculeview.cpp
M  +177  -205  src/tools/moleculeviewerwidget.ui

http://commits.kde.org/kalzium/e60aa6fdf5f59fb620b68edb13492583d79bcc7c