Removing the atom index from the label combobox in the molecule drawer. The index in avogadro is really the id of the atom drawn. It is not the element number.

For the kalzium molecule view/drawer the id makes no sens to have.

BUG: 268318